# quickcheck-slides

./: README
clfeat/: project.clj
clfeat/src/clfeat/: core.clj  display.clj
examples/: pubspec.yaml
examples/lib/: tree.dart
figures/: Main.hs  figures.cabal  stack.yaml
filter/: Setup.hs  filter.cabal  filter.hs  stack.yaml
histograms/: Main.hs  gen1  gen2  gen3  gen31  gen4  gen5  histograms.cabal  size_by_depth_bad  size_by_depth_good  stack.yaml
slides/: gen.sh  slides.md
