-- Copyright 2017 Google Inc.
--
-- Licensed under the Apache License, Version 2.0 (the "License");
-- you may not use this file except in compliance with the License.
-- You may obtain a copy of the License at
--
--      http://www.apache.org/licenses/LICENSE-2.0
--
-- Unless required by applicable law or agreed to in writing, software
-- distributed under the License is distributed on an "AS IS" BASIS,
-- WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-- See the License for the specific language governing permissions and
-- limitations under the License.

name:                figures
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.8

executable Main
  main-is:            Main.hs
  build-depends:       base ==4.*,
                       diagrams,
                       diagrams-lib,
                       diagrams-svg,
                       diagrams-contrib,
                       diagrams-rasterific,
                       testing-feat,
                       smallcheck,
                       random,
                       MonadRandom,
                       containers
  ghc-options:         -O2
