-- Copyright 2017 Google Inc.
--
-- Licensed under the Apache License, Version 2.0 (the "License");
-- you may not use this file except in compliance with the License.
-- You may obtain a copy of the License at
--
--      http://www.apache.org/licenses/LICENSE-2.0
--
-- Unless required by applicable law or agreed to in writing, software
-- distributed under the License is distributed on an "AS IS" BASIS,
-- WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-- See the License for the specific language governing permissions and
-- limitations under the License.

name:                filter
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.8

executable filter
  main-is:            filter.hs
  -- other-modules:
  build-depends:       base ==4.*, pandoc ==1.14.*, pandoc-types ==1.12.*, process ==1.2.*
